// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FiltersIcon /> should render properly with a green dot 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  background-color: #73b61c;
  width: 10px;
  height: 10px;
  border-radius: 10px;
  border: 2px solid #252525;
  position: absolute;
  top: -3px;
  right: -2px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  />
  <svg
    data-file-name="filter.svg"
    height={20}
  />
</div>
`;

exports[`<FiltersIcon /> should render properly with a grey dot 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  background-color: #808080;
  width: 10px;
  height: 10px;
  border-radius: 10px;
  border: 2px solid #252525;
  position: absolute;
  top: -3px;
  right: -2px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  />
  <svg
    data-file-name="filter.svg"
    height={20}
  />
</div>
`;
